--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
+    "react-native": "^0.68.1",
+    "react-native-web": "^0.17.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
