--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/static/react"
+  "homepage": "/static/react",
+  "devDependencies": {
+    "eslint-plugin-react": "^7.29.4"
+  }
 }
